# sphSolver

./: .gitignore  CMakeLists.txt  CMakelists.txt  Makefile  README.md  common.c  common.h  compile.sh  debug.sh  loader.c  main.c  physics.c  physics.h  sph.sublime-workspace  sph_alpha
shaders/: freetype.fs  freetype.vs  skybox.fs  skybox.vs  triangle.fs  triangle.vs  water_refrac.fs  water_refrac.vs  water_sprites.fs  water_sprites.vs
src/: camera.c  camera.cpp  camera.h  common.cpp  common.h  density.c  density.cpp  density.h  main.c  main.cpp  marchingcubes.c  marchingcubes.cpp  marchingcubes.h  memory.cpp  memory.h  modeldata.h  physics.c  physics.cpp  physics.h  renderer.c  renderer.h  shaderLoader.cpp  shaderLoader.h  textureLoader.c  textureLoader.h  water.cpp
testbench/: memory.c
